--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-.home{
+
+.home {
     width: 100%;
     height: 900px;
     background: #e7df6a;
-    border: 1px solid #000000;
+    border: 1px solid #000;
+    padding-top: 80px;
 }
+
 .navigation {
     position: fixed;
     top: 0;
@@ -20,19 +23,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1;
+    z-index: 1000;
 }
 
-ul{
-    list-style-type: none;
+ul {
+    list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
 }
-ul li{
+
+ul li {
     margin: 0 15px;
 }
+
 ul li a {
     text-decoration: none;
     font-size: 18px;
@@ -41,18 +46,17 @@ ul li a {
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
+
 ul li a:hover {
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
+    background-color: #fff;
+    color: #000;
 }
 
-/* about section */
-.about { 
+/* About section */
+.about {
     width: 100%;
     height: 900px;
-    border: 1px solid #000000;
-    /* z-index: 2; */
-    margin-top: 80px;
+    border: 1px solid #000;
     background: #ff7b7b;
+    padding-top: 80px;
 }
-
